add facilities content and image

--- a/app/views/facilities/bolt.html.erb
+++ b/app/views/facilities/bolt.html.erb
@@ -24,16 +24,24 @@
           </aside>
           <div class="content-wrapper col-md-5 col-sm-4">
             <ul class="custom-list-style">
-              <li><i class="fa fa-star"></i>11B= 6 Sets</li>
-              <li><i class="fa fa-star"></i>14B= 9 Sets</li>
-              <li><i class="fa fa-star"></i>19B= 5 Sets</li>
-              <li><i class="fa fa-star"></i>22B= 1 Sets</li>
-              <li><i class="fa fa-star"></i>24B= 3 Sets</li>
-              <li><i class="fa fa-star"></i>27B= 1 Sets</li>
-              <li><i class="fa fa-star"></i>33B= 1 Sets</li>
+              <li><i class="fa fa-star"></i>½ 4B4D x 4” = 5 Sets</li>
+              <li><i class="fa fa-star"></i>½ 5B5D x 6” = 3 Sets</li>
+              <li><i class="fa fa-star"></i>5/8 4B4D x 6” = 1 Set</li>
+              <li><i class="fa fa-star"></i>5/8 5B5D x 6” = 1 Set</li>
+              <li><i class="fa fa-star"></i>¾ 4B4D x 6” = 1 Set</li>
+              <li><i class="fa fa-star"></i>5/16 3B3D x 2” = 3 Sets</li>
+              <li><i class="fa fa-star"></i>5/16 4B4D x 3” = 1 Set</li>
+              <li><i class="fa fa-star"></i>3/8 Tubular Rivet Machine = 2 Sets</li>
+              <li><i class="fa fa-star"></i>5/16 Tubular Rivet Machine = 9 Sets</li>
+              <li><i class="fa fa-star"></i>3/16 Tubular Rivet Machine = 2 Sets</li>
+              <li><i class="fa fa-star"></i>Wire Diameter = 3.0 – 30.0 mm</li>
+              <li><i class="fa fa-star"></i>Flange Diameter = 65 mm Max</li>
             </ul>
           </div>
-          <div class="content-wrapper col-md-5 col-sm-4"></div>
+          <div class="content-wrapper col-md-5 col-sm-4">
+            <img class="img-responsive" src="<%= asset_path "facilities/bolt.png"%>" alt=""/>
+          </div>
         </div>
+      </div>
     </div>
   </div>
