--- a/app/views/facilities/nut.html.erb
+++ b/app/views/facilities/nut.html.erb
@@ -27,13 +27,16 @@
               <li><i class="fa fa-star"></i>11B= 6 Sets</li>
               <li><i class="fa fa-star"></i>14B= 9 Sets</li>
               <li><i class="fa fa-star"></i>19B= 5 Sets</li>
-              <li><i class="fa fa-star"></i>22B= 1 Sets</li>
+              <li><i class="fa fa-star"></i>22B= 1 Set</li>
               <li><i class="fa fa-star"></i>24B= 3 Sets</li>
-              <li><i class="fa fa-star"></i>27B= 1 Sets</li>
-              <li><i class="fa fa-star"></i>33B= 1 Sets</li>
+              <li><i class="fa fa-star"></i>27B= 1 Set</li>
+              <li><i class="fa fa-star"></i>33B= 1 Set</li>
             </ul>
           </div>
-          <div class="content-wrapper col-md-5 col-sm-4"></div>
+          <div class="content-wrapper col-md-5 col-sm-4">
+            <img class="img-responsive" src="<%= asset_path "facilities/nut.png"%>" alt=""/>
+          </div>
         </div>
+      </div>
     </div>
   </div>
