--- a/app/views/facilities/stamping.html.erb
+++ b/app/views/facilities/stamping.html.erb
@@ -22,8 +22,24 @@
                 </ul>
             </section><!--//widget-->
           </aside>
-          <div class="content-wrapper col-md-5 col-sm-4"></div>
-          <div class="content-wrapper col-md-5 col-sm-4"></div>
+          <div class="content-wrapper col-md-5 col-sm-4">
+            <ul class="custom-list-style">
+              <li><i class="fa fa-star"></i>200 tons – 2 Sets</li>
+              <li><i class="fa fa-star"></i>160 tons – 3 Sets</li>
+              <li><i class="fa fa-star"></i>110 tons – 11 Sets</li>
+              <li><i class="fa fa-star"></i>80 tons – 7 Sets</li>
+              <li><i class="fa fa-star"></i>60 tons – 2 Sets</li>
+              <li><i class="fa fa-star"></i>45 tons – 22 Sets</li>
+              <li><i class="fa fa-star"></i>35 tons – 5 Sets</li>
+              <li><i class="fa fa-star"></i>200 tons – 3 Sets</li>
+              <li><i class="fa fa-star"></i>260 tons – 2 Sets</li>
+              <li><i class="fa fa-star"></i>350 tons – 1 Sets</li>
+              <li><i class="fa fa-star"></i>400 tons – 1 Sets</li>
+            </ul>
+          </div>
+          <div class="content-wrapper col-md-5 col-sm-4">
+            <img class="img-responsive" src="<%= asset_path "facilities/stamping.png"%>" alt=""/>
+          </div>
         </div>
     </div>
   </div>
