update products styles

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1974,7 +1974,8 @@ ul.custom-list-style li {
     min-height: 100px;
   }
   .page-wrapper .album-cover {
-    min-height: 360px;
+    min-height: 210px;
+    /* min-height: 360px; */
   }
   /* Sticky Footer */
   html,
