--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1166,7 +1166,7 @@ ul.custom-list-style li {
   opacity: 0.9;
 }
 .page-wrapper .page-content .album-cover .desc {
-  padding: 15px;
+  /*padding: 15px;*/
   position: relative;
 }
 .page-wrapper .page-content .album-cover .desc:before {
