--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <body class="home-page">
     <div class="wrapper">
-      <!-- ******CONTENT****** --> 
+      <!-- ******CONTENT****** -->
       <div class="content container">
           <div id="promo-slider" class="slider flexslider">
               <ul class="slides">
@@ -9,26 +9,68 @@
                   <% end %>
               </ul><!--//slides-->
           </div><!--//flexslider-->
-          <section class="promo box box-dark">        
+          <section class="promo box box-dark">
               <div class="col-md-9">
               <h1 class="section-heading">Why Locksure</h1>
-                  <p>Locksure provide progressive stamping, deep drawing, in-die tapping.</p>   
-              </div>  
+                  <p>Locksure provide progressive stamping, deep drawing, in-die tapping.</p>
+              </div>
               <div class="col-md-3">
                   <%= link_to "Contact Us", contact_index_path, class: "btn btn-cta"%>
               </div>
           </section><!--//promo-->
+
+          <div class="col-md-4">
+            <section class="video">
+              <div class="section-content">
+                <div id="videos-carousel" class="videos-carousel carousel slide">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                        <iframe class="video-iframe" src="//www.youtube.com/embed/r9LelXa3U_I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen=""></iframe>
+                    </div>
+                  </div>
+                </div><!--//videos-carousel-->
+                <p class="description">Aenean feugiat a diam tempus sodales. Quisque lorem nulla, ultrices imperdiet malesuada at, suscipit vel lorem. Nulla dignissim nisi ac aliquet semper.</p>
+              </div><!--//section-content-->
+            </section>
+          </div><div class="col-md-4">
+            <section class="video">
+              <div class="section-content">
+                <div id="videos-carousel" class="videos-carousel carousel slide">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                        <iframe class="video-iframe" src="//www.youtube.com/embed/r9LelXa3U_I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen=""></iframe>
+                    </div>
+                  </div>
+                </div><!--//videos-carousel-->
+                <p class="description">Aenean feugiat a diam tempus sodales. Quisque lorem nulla, ultrices imperdiet malesuada at, suscipit vel lorem. Nulla dignissim nisi ac aliquet semper.</p>
+              </div><!--//section-content-->
+            </section>
+          </div><div class="col-md-4">
+            <section class="video">
+              <div class="section-content">
+                <div id="videos-carousel" class="videos-carousel carousel slide">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                        <iframe class="video-iframe" src="//www.youtube.com/embed/r9LelXa3U_I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen=""></iframe>
+                    </div>
+                  </div>
+                </div><!--//videos-carousel-->
+                <p class="description">Aenean feugiat a diam tempus sodales. Quisque lorem nulla, ultrices imperdiet malesuada at, suscipit vel lorem. Nulla dignissim nisi ac aliquet semper.</p>
+              </div><!--//section-content-->
+            </section>
+          </div>
+
       </div><!--//content-->
   </div><!--//wrapper-->
     <script type="text/javascript" src="assets/plugins/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script> 
-    <script type="text/javascript" src="assets/plugins/bootstrap-hover-dropdown.min.js"></script> 
+    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/plugins/bootstrap-hover-dropdown.min.js"></script>
     <script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-placeholder/jquery.placeholder.js"></script>
     <script type="text/javascript" src="assets/plugins/pretty-photo/js/jquery.prettyPhoto.js"></script>
     <script type="text/javascript" src="assets/plugins/flexslider/jquery.flexslider-min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jflickrfeed/jflickrfeed.min.js"></script> 
+    <script type="text/javascript" src="assets/plugins/jflickrfeed/jflickrfeed.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 
