--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -1,30 +1,27 @@
 <div class="content container">
-  <div class="page-wrapper">
-    <header class="page-heading clearfix">
-      <h1 class="heading-title pull-left">Catelog</h1>
-    </header>
-    <div class="page-sidebar col-md-1 col-sm-2 affix-top"></div>
-    <div class="content-wrapper col-md-10 col-sm-8">
-      <div class="tabbed-info page-row">
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#tab1" data-toggle="tab" aria-expanded="true">File</a></li>
-          <li class=""><a href="#tab2" data-toggle="tab" aria-expanded="flase">Image</a></li>
-        </ul>
-        <div class="tab-content">
-          <div class="tab-pane active" id="tab1">
-            <table class="table table-bordered table-hover">
-              <tbody>
-              <% @catalog.each do |catalog| %>
-                <% if catalog.catalogtype == "file"%>
-                <tr>
-                  <td><%= catalog.title %><a class="right" target="_blank" download href="<%= catalog.path %>"><i class= "fa fa-lg fa-download"></i></a></td>
-                </tr>
-                <% end %>
-              <% end %>
-              </tbody>
-            </table>
-          </div>
-          <div class="tab-pane" id="tab2">
+    <div class="page-wrapper">
+      <header class="page-heading clearfix">
+        <h1 class="heading-title pull-left">Catalog</h1>
+        <div class="breadcrumbs pull-right">
+          <ul class="breadcrumbs-list">
+              <li class="breadcrumbs-label">You are here:</li>
+              <li><a href="index.html">Home</a><i class="fa fa-angle-right"></i></li>
+              <li><a href="#">Catalog</a><i class="fa fa-angle-right"></i></li>
+              <li class="current">Catalog</li>
+          </ul>
+        </div>
+      </header>
+      <div class="page-content"></div>
+        <div class="row page-row">
+          <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
+            <section class="widget">
+                <ul class="nav">
+                  <li class="active"><a href="/catalog/index">Catalog</a></li>
+                  <li><a href="/catalog/brochure">Brochure</a></li>
+                </ul>
+                </section><!--//widget-->
+          </aside>
+          <div class="content-wrapper col-md-10 col-sm-8">
             <div class="page-content">
             <div class="row">
             <% @catalog.each do |catalog| %>
@@ -42,11 +39,11 @@
               <% end %>
             <% end %>
             </div>
-            </div>
           </div>
-        </div>
       </div>
     </div>
-    <div class="page-sidebar col-md-1 col-sm-2"></div>
   </div>
 </div>
+
+
+
