update facility pages

--- a/app/views/facilities/stamping.html.erb
+++ b/app/views/facilities/stamping.html.erb
@@ -16,9 +16,9 @@
           <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
             <section class="widget">
                 <ul class="nav">
-                  <li><a href="/facilities/bolt">Bolt Former </a></li>
-                  <li><a href="/facilities/nut">Nut Former</a></li>
-                  <li class="active"><a href="/facilities/stamping">Stamping</a></li>
+                  <li><a href="/facilities/bolt">Bolt Facility</a></li>
+                  <li><a href="/facilities/nut">Nut Facility</a></li>
+                  <li class="active"><a href="/facilities/stamping">Stamping Facility</a></li>
                 </ul>
             </section><!--//widget-->
           </aside>
@@ -39,7 +39,26 @@
           </div>
           <div class="content-wrapper col-md-5 col-sm-4">
             <img class="img-responsive" src="<%= asset_path "facilities/stamping.png"%>" alt=""/>
+            <br />
           </div>
+        </div>
+        <div class="row page-row">
+          <aside class="page-sidebar col-md-2 col-sm-4 affix-top"></aside>
+          <div class="col-md-8 panel panel-default" style="left:60px;"><!--//video-->
+            <section class="video panel-body">
+              <div class="section-content">
+                <div id="videos-carousel" class="videos-carousel carousel slide">
+                  <div class="carousel-inner">
+                    <div class="item active" align="center">
+                      <iframe class="video-iframe" src="//www.youtube.com/embed/r9LelXa3U_I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="480" ></iframe>
+                    </div>
+                  </div>
+                </div><!--//videos-carousel-->
+                <p class="description">Aenean feugiat a diam tempus sodales. Quisque lorem nulla, ultrices imperdiet malesuada at, suscipit vel lorem. Nulla dignissim nisi ac aliquet semper.</p>
+              </div><!--//section-content-->
+            </section>
+          </div>
+          <aside class="page-sidebar col-md-3 col-sm-4 affix-top"></aside>
         </div>
     </div>
   </div>
