random products in slides and refactor code

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
       <div class="content container">
           <div id="promo-slider" class="slider flexslider">
               <ul class="slides">
-                  <% @products.each do |slide| %>
+                  <% @slides.each do |slide| %>
                     <li><%= image_tag slide.image %></li>
                   <% end %>
               </ul><!--//slides-->
