--- a/app/views/layouts/_navigation_bar.html.erb
+++ b/app/views/layouts/_navigation_bar.html.erb
@@ -12,7 +12,7 @@
         <div class="navbar-collapse collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="nav-item"><%=link_to "Home", root_path %></li>
-                <li class="nav-item"><%=link_to "About", about_index_path %></li>
+                <li class="nav-item"><%=link_to "About", '/about/introduction' %></li>
                 <li class="nav-item"><%=link_to "Products", products_path %></li>
                 <li class="nav-item"><%=link_to "Facilities", '/facilities/bolt' %></li>
                 <li class="nav-item"><%=link_to "Catalog", catalog_index_path %></li>
