restore to unbroken commit

--- a/app/views/about/introduction.html.erb
+++ b/app/views/about/introduction.html.erb
@@ -22,7 +22,7 @@
                       </ul>
                     </section><!--//widget-->
                   </aside>
-                  <article class="welcome col-md-8 col-sm-7 watermark">
+                  <article class="welcome col-md-8 col-sm-7">
                         <!--<h3 class="title">Locksure’s New Plant in Chuanghua Ready to Take off. Automotive Welded Nut Runs in Mass Production by Kelly Wang,Fastener World Inc.</h3>-->
                         <!--<p><img class="img-responsive" src="assets/images/750x300-about.jpg" alt="" /></p>-->
                         <!--
@@ -51,3 +51,14 @@
 </div><!--//wrapper-->
 
 
+<!-- Javascript -->
+<script type="text/javascript" src="assets/plugins/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/plugins/bootstrap-hover-dropdown.min.js"></script>
+<script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
+<script type="text/javascript" src="assets/plugins/jquery-placeholder/jquery.placeholder.js"></script>
+<script type="text/javascript" src="assets/plugins/pretty-photo/js/jquery.prettyPhoto.js"></script>
+<script type="text/javascript" src="assets/plugins/flexslider/jquery.flexslider-min.js"></script>
+<script type="text/javascript" src="assets/plugins/jflickrfeed/jflickrfeed.min.js"></script>
+<script type="text/javascript" src="assets/js/main.js"></script>
