--- a/app/assets/stylesheets/catelog.css.scss
+++ b/app/assets/stylesheets/catelog.css.scss
@@ -4,3 +4,21 @@
 .right{
   float:right;
 }
+.watermark {
+  display: block;
+  position: relative;
+}
+
+.watermark:after {
+  content: "";
+  background-image: image-url('Strip3.jpg');
+  background-repeat:no-repeat;
+  background-position:center;
+  opacity: 0.1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
