--- a/app/views/about/introduction.html.erb
+++ b/app/views/about/introduction.html.erb
@@ -22,7 +22,7 @@
                       </ul>
                     </section><!--//widget-->
                   </aside>
-                  <article class="welcome col-md-8 col-sm-7">
+                  <article class="welcome col-md-8 col-sm-7 watermark">
                         <!--<h3 class="title">Locksure’s New Plant in Chuanghua Ready to Take off. Automotive Welded Nut Runs in Mass Production by Kelly Wang,Fastener World Inc.</h3>-->
                         <!--<p><img class="img-responsive" src="assets/images/750x300-about.jpg" alt="" /></p>-->
                         <!--
