--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <body class="home-page">
     <div class="wrapper">
       <!-- ******CONTENT****** -->
+      <div class="content container">
       <div class="col-md-6">
           <section class="video">
               <div class="section-content">
@@ -46,7 +47,7 @@
                   <%= link_to "Contact Us", contact_index_path, class: "btn btn-cta"%>
               </div>
           </section><!--//promo-->
-
+      </div>
       </div><!--//content-->
   </div><!--//wrapper-->
 </body>
