--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,9 @@
 <script type="text/javascript" src="/assets/plugins/pretty-photo/js/jquery.prettyPhoto.js"></script>
 <script type="text/javascript" src="/assets/plugins/flexslider/jquery.flexslider-min.js"></script>
 <script type="text/javascript" src="/assets/plugins/jflickrfeed/jflickrfeed.min.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="/assets/plugins/gmaps/gmaps.js"></script>
+<script type="text/javascript" src="/assets/js/map.js"></script>
 <script type="text/javascript" src="/assets/js/main.js"></script>
 </body>
 </html>
