require map library at contact page

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -46,3 +46,6 @@
     </div><!--//content-->
   </div><!--//wrapper-->
   <!-- Javascript -->
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script type="text/javascript" src="/assets/plugins/gmaps/gmaps.js"></script>
+  <script type="text/javascript" src="/assets/js/map.js"></script>
