--- a/app/views/facilities/bolt.html.erb
+++ b/app/views/facilities/bolt.html.erb
@@ -52,11 +52,11 @@
                 <div id="videos-carousel" class="videos-carousel carousel slide">
                   <div class="carousel-inner">
                     <div class="item active" align="center">
-                      <iframe class="video-iframe" src="//www.youtube.com/embed/r9LelXa3U_I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="480" ></iframe>
+                      <iframe class="video-iframe" src="//www.youtube.com/embed/7htZkSe-MfY?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="480" ></iframe>
                     </div>
                   </div>
                 </div><!--//videos-carousel-->
-                <p class="description">Aenean feugiat a diam tempus sodales. Quisque lorem nulla, ultrices imperdiet malesuada at, suscipit vel lorem. Nulla dignissim nisi ac aliquet semper.</p>
+                <p class="description"></p>
               </div><!--//section-content-->
             </section>
           </div>
