show 3 videos in home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
     <div class="wrapper">
       <!-- ******CONTENT****** -->
       <div class="content container">
-      <div class="col-md-6">
+      <div class="col-md-4">
           <section class="video">
               <div class="section-content">
                 <div id="videos-carousel" class="videos-carousel carouse slide">
@@ -14,7 +14,20 @@
                 </div><!--//videos-carousel-->
               </div><!--//section-content-->
           </section></div>
-          <div class="col-md-6">
+          <div class="col-md-4">
+            <section class="video">
+              <div class="section-content">
+                <div id="videos-carousel" class="videos-carousel carousel slide">
+                  <div class="carousel-inner">
+                      <div class="item active">
+                        <iframe class="video-iframe" src="https://www.youtube.com/embed/pQRZ8dWAcUg" frameborder="0" allowfullscreen=""></iframe>
+                    </div>
+                  </div>
+                </div><!--//videos-carousel-->
+              </div><!--//section-content-->
+            </section>
+          </div>
+          <div class="col-md-4">
             <section class="video">
               <div class="section-content">
                 <div id="videos-carousel" class="videos-carousel carousel slide">
