update logo and navbar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     </div><!--//to-bar-->
     <div class="header-main container">
         <h1 class="logo col-md-4 col-sm-4">
-            <%= link_to("LOCKSURE", root_path) %>
+            <a href="/"><img class="img-responsive" src="<%= asset_path "logo-temp.png"%>" alt=""/></a>
         </h1><!--//logo-->
         <div class="info col-md-8 col-sm-8">
             <div class="contact pull-right">
