--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,10 @@
     </div><!--//to-bar-->
     <div class="header-main container">
         <h1 class="logo col-md-4 col-sm-4">
-            <%= link_to("LOCKSURE", root_path) %>
+            <!--<%= link_to("LOCKSURE", root_path) %>-->
+          <a href="/">
+            <img src="<%= asset_path "locksure_logo.png"%>" alt="logo" />
+          </a>
         </h1><!--//logo-->
         <div class="info col-md-8 col-sm-8">
             <div class="contact pull-right">
