--- a/app/views/layouts/_navigation_bar.html.erb
+++ b/app/views/layouts/_navigation_bar.html.erb
@@ -10,7 +10,7 @@
             </button><!--//nav-toggle-->
         </div><!--//navbar-header-->
         <div class="navbar-collapse collapse" id="navbar-collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav custom">
                 <li class="nav-item"><%=link_to "Home", root_path %></li>
                 <li class="nav-item"><%=link_to "About", '/about/introduction' %></li>
                 <li class="nav-item"><%=link_to "Products", products_path %></li>
