--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -300,6 +300,10 @@ ul.custom-list-style li {
 .nav > li > a {
   font-size: 13px;
 }
+.nav.navbar-nav.custom > li > a {
+  font-size: 17px;
+  line-height:28px;
+}
 .nav-tabs > li > a {
   border: 1px solid #e8e8e8;
   border-bottom: none;
@@ -804,7 +808,7 @@ ul.custom-list-style li {
 .main-nav .nav .nav-item.active > a:before {
   content: "\f0d8";
   position: absolute;
-  bottom: -8px;
+  bottom: -12px;
   left: 0;
   text-align: center;
   font-family: FontAwesome;
