--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,10 +20,10 @@
             <% @products.each do |product| %>
               <div class="col-md-3 col-sm-3 col-xs-6 text-center">
                 <div class="album-cover">
-                  <a href="<%= product.image.url %>" data-toggle="lightbox" data-gallery="multiimages" data-title="<%= product.name%>"  ><%= image_tag product.image_url, class: "img-responsive" %></a>
+                  <a href="<%= product.image.url %>" data-lightbox="<%= product.image.url %>"  data-title="<%= product.name%>"  ><%= image_tag product.image_url, class: "img-responsive" %></a>
                   <div class="desc">
                     <h4>
-                      <a href="<%= product.image.url %>" data-toggle="lightbox" data-gallery="multiimages" data-title="<%= product.name%>"><%= product.name %></a>
+                      <a class="product_title"><%= product.name %></a>
                       <% if product.attachment != '' %>
                         <a href="<%= product.attachment%>"><i class='fa fa-file' style='position:absolute;right:10px;'> </i></a>
                       <%end%>
