--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,7 @@
                   <img class="img-responsive" src="<%= asset_path "boltforming.png"%>" alt=""/>
                 </div>
                 <article class="col-md-6">
-                  <h4>Bolt Foaming</h4>
+                  <h4>Bolt Forming</h4>
                   <p>Founded in 1984, Locksure has been the leading special parts supplier in fastener industry. Product ranges from special cold formed parts to parts with secondary operation & assembly.</p>
                   <p>As the industry evolves, Locksure start supplying automotive parts to Tier1 & Tier2 automotive customers including BMW, Gestamp, Faurecia, Lear & Brose etc. To better serve the needs of quality-oriented automotive customers, Locksure is now in the process of TS16949 certification. We also invest in 3 factories that strengthen our manufacturing capabilities and product variety.</p>
                   <p>Having over 30 years of experience exporting to USA, Europe, South America & Middle East, Locksure can provide you all the service you need. With a wide range of product lines, great special part developing capability and strict quality control. Locksure is your best choice for automotive fasteners</p>
@@ -108,6 +108,7 @@
             </div>
           </div>
 
+          <!--
           <section class="promo box box-dark">
               <div class="col-md-9">
               <h1 class="section-heading">Why Locksure</h1>
@@ -117,6 +118,7 @@
                   <%= link_to "Contact Us", contact_index_path, class: "btn btn-cta"%>
               </div>
           </section><!--//promo-->
+          -->
       </div>
       </div><!--//content-->
   </div><!--//wrapper-->
