--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,7 +73,7 @@
                     <div id="videos-carousel" class="videos-carousel carousel slide">
                       <div class="carousel-inner">
                           <div class="item active">
-                            <iframe class="video-iframe" src="https://www.youtube.com/embed/pQRZ8dWAcUg" frameborder="0" allowfullscreen=""></iframe>
+                            <iframe class="video-iframe" src="https://www.youtube.com/embed/IOsvXA_L35I" frameborder="0" allowfullscreen=""></iframe>
                         </div>
                       </div>
                     </div><!--//videos-carousel-->
