remove description in facilities/nut

--- a/app/views/facilities/nut.html.erb
+++ b/app/views/facilities/nut.html.erb
@@ -50,7 +50,7 @@
                     </div>
                   </div>
                 </div><!--//videos-carousel-->
-                <p class="description">Aenean feugiat a diam tempus sodales. Quisque lorem nulla, ultrices imperdiet malesuada at, suscipit vel lorem. Nulla dignissim nisi ac aliquet semper.</p>
+                <p class="description"></p>
               </div><!--//section-content-->
             </section>
           </div>
